--- a/global.css
+++ b/global.css
@@ -23,6 +23,11 @@ body {
     margin-bottom: 100px;
 }
 
+.textContainer {
+    display: flex;
+    flex-wrap: wrap;
+}
+
 .project {
     font-size: 20px;
     width: 300px;
@@ -47,7 +52,22 @@ img {
     filter: brightness(0.75) sepia(0.3) saturate(1.2);
 }
 
-p {
+#projectName {
     margin-top: 0%;
     border-bottom: 5px solid black;
+}
+
+p:not(#projectName) {
+    border-radius: 10px;
+    color: white;
+    background-color: #4281A4;
+    margin: 0;
+    box-sizing: border-box;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    padding-right: 8px;
+    padding-left: 8px;
+    margin-left: 10px;
+    margin-top: 5px;
+    font-family: Arial, Helvetica, sans-serif;
 }
