--- a/global.css
+++ b/global.css
@@ -57,7 +57,7 @@ img {
     border-bottom: 5px solid black;
 }
 
-p:not(#projectName) {
+.tag {
     border-radius: 10px;
     color: white;
     background-color: #4281A4;
@@ -67,7 +67,7 @@ p:not(#projectName) {
     padding-bottom: 2px;
     padding-right: 8px;
     padding-left: 8px;
-    margin-left: 10px;
+    margin-left: 8px;
     margin-top: 5px;
     font-family: Arial, Helvetica, sans-serif;
 }
