--- a/global.css
+++ b/global.css
@@ -1,73 +1,86 @@
-body {
+* {
+    box-sizing: border-box;
+    padding: 0;
     margin: 0;
 }
 
-#navBar {
-    font-size: 40px;
-    font-weight: bold;
-    font-family: 'Times New Roman', Times, serif;
-    color: white;
-    background-color: #4281A4;
-    text-align: center;
-    padding: 20px;
-    border-bottom: 5px solid #9CAFB7;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
+body {
+    font-family: sans-serif;
+    background-color: #001E2F;
 }
 
-.container {
-    display: flex;
-    flex-wrap: wrap;
-    margin-left: 100px;
-    margin-right: 100px;
-    margin-bottom: 100px;
+ul {
+    list-style-type: none;
 }
 
-.textContainer {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.project {
-    font-size: 20px;
-    width: 300px;
-    height: 400px;
-    border: 5px solid black;
-    margin-left: 20px;
-    margin-top: 20px;
-    border-radius: 10px;
-    text-align: center;
-    font-weight: bold;
+a {
+    text-decoration: none;
+    color: #FFF;
 }
 
 img {
-    max-height: 180px;
     width: 100%;
-    box-sizing: border-box;
-    margin-bottom: 0px;
-    border-bottom: 5px solid black;
 }
 
-.aContain:hover img { 
-    filter: brightness(0.75) sepia(0.3) saturate(1.2);
+/*Navigation Bar Elements*/
+.navbar {
+    background-color: #001E2F;
+    height: 50px;
+    border-bottom-style: solid;
+    border-bottom-color: #7B9E87;;
 }
 
-#projectName {
-    margin-top: 0%;
-    border-bottom: 5px solid black;
+.navbar .flex {
+    justify-content: space-between;
 }
 
-.tag {
-    border-radius: 10px;
-    color: white;
-    background-color: #4281A4;
-    margin: 0;
-    box-sizing: border-box;
-    padding-top: 2px;
-    padding-bottom: 2px;
-    padding-right: 8px;
-    padding-left: 8px;
-    margin-left: 8px;
-    margin-top: 5px;
-    font-family: Arial, Helvetica, sans-serif;
+.navbar ul {
+    display: flex;
+}
+
+.navbar a:hover{
+    background-color: #7B9E87;
+}
+
+
+.navbar a {
+    padding: 10px;
+    font-family: 'Bebas Neue', sans-serif;
+    font-size: larger;
+    border-right-style: solid;
+    border-right-color: #7B9E87;
+    letter-spacing: 2px;
+}
+
+.navbar li:first-child a {
+    border-left-style: solid;
+    border-left-color: #7B9E87;
+}
+
+.navbar a:hover {
+}
+
+.container {
+    max-width: 1600px;
+    margin: 0 auto;
+    overflow: auto;
+}
+
+.container p{
+    padding: 0 20px;
+}
+
+.flex {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+}
+
+.navName {
+    color: #FFF;
+    text-shadow: 0 4px 5px rgba(0, 0, 0, 0.25);
+    font-family: 'Tilt Warp';
+    font-size: 22px;
+    font-weight: 400;
 }
