--- a/global.css
+++ b/global.css
@@ -1,3 +1,8 @@
+:root {
+    --bg-color: #001E2F;
+    --font-color: #7B9E87;
+}
+
 * {
     box-sizing: border-box;
     padding: 0;
@@ -6,7 +11,6 @@
 
 body {
     font-family: sans-serif;
-    background-color: #001E2F;
 }
 
 ul {
@@ -24,10 +28,10 @@ img {
 
 /*Navigation Bar Elements*/
 .navbar {
-    background-color: #001E2F;
+    background-color: var(--bg-color);
     height: 50px;
     border-bottom-style: solid;
-    border-bottom-color: #7B9E87;;
+    border-bottom-color: var(--font-color);
 }
 
 .navbar .flex {
@@ -38,8 +42,8 @@ img {
     display: flex;
 }
 
-.navbar a:hover{
-    background-color: #7B9E87;
+.navbar a:hover {
+    background-color: var(--font-color);
 }
 
 
@@ -48,22 +52,31 @@ img {
     font-family: 'Bebas Neue', sans-serif;
     font-size: larger;
     border-right-style: solid;
-    border-right-color: #7B9E87;
+    border-right-color: var(--font-color);
     letter-spacing: 2px;
 }
 
 .navbar li:first-child a {
     border-left-style: solid;
-    border-left-color: #7B9E87;
+    border-left-color: var(--font-color);
 }
 
+.navName {
+    color: #FFF;
+    text-shadow: 0 4px 5px rgba(0, 0, 0, 0.25);
+    font-family: 'Tilt Warp';
+    font-size: 22px;
+    font-weight: 400;
+}
+
+/*Utilities*/
 .container {
     max-width: 1600px;
     margin: 0 auto;
     overflow: auto;
 }
 
-.container p{
+.container p {
     padding: 0 20px;
 }
 
@@ -74,10 +87,60 @@ img {
     height: 100%;
 }
 
-.navName {
-    color: #FFF;
-    text-shadow: 0 4px 5px rgba(0, 0, 0, 0.25);
-    font-family: 'Tilt Warp';
-    font-size: 22px;
-    font-weight: 400;
+.grid {
+    display: grid;
+    grid-template-columns: 3fr 2fr;
+    gap: 10px;
+    justify-content: center;
+    align-items: center;
+}
+
+/*Intro segment*/
+.visualDesign {
+    margin: 0 auto;
+}
+
+.visualizeMe img {
+    width: 400px;
+    user-select: none;
+}
+
+.introSegment {
+    background-color: var(--bg-color);
+    height: 670px;
+    border-bottom-style: solid;
+    border-bottom-color: var(--font-color);
+    position: relative;
+    align-content: center;
+    /*Allows for abosolute positioning within*/
+}
+
+.introText {
+    font-family: 'Tinos', sans-serif;
+    display: grid;
+    text-align: center;
+}
+
+.introText h1 {
+    font-size: 90px;
+    color: #B6BE9C;
+}
+
+.introText h3 {
+    font-size: 40px;
+    color: #fff;
+    text-align: center;
+    font-weight: 100;
+}
+
+.introText a {
+    border-radius: 50px;
+    padding: 15px 60px;
+    font-family: 'Bebas Neue', sans-serif;
+    border: 4px solid #7B9E87;
+    background: #001E2F;
+    font-size: 24px;
+    letter-spacing: 2px;
+    margin: 10px auto;
+
 }
