--- a/global.css
+++ b/global.css
@@ -11,6 +11,7 @@
 
 body {
     font-family: sans-serif;
+    background-color: var(--bg-color);
 }
 
 ul {
@@ -28,10 +29,23 @@ img {
 
 /*Navigation Bar Elements*/
 .navbar {
+    position: sticky;
     background-color: var(--bg-color);
     height: 50px;
     border-bottom-style: solid;
     border-bottom-color: var(--font-color);
+    animation: dropIn 1s ease-out forwards;
+}
+
+@keyframes dropIn {
+    from {
+        opacity: 0;
+        transform: translateY(-20px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
 
 .navbar .flex {
@@ -93,16 +107,19 @@ img {
     gap: 10px;
     justify-content: center;
     align-items: center;
+    height: 100%;
 }
 
 /*Intro segment*/
 .visualDesign {
     margin: 0 auto;
+    align-self: end;
 }
 
 .visualizeMe img {
-    width: 400px;
+    width: 440px;
     user-select: none;
+     display: block;
 }
 
 .introSegment {
@@ -119,10 +136,12 @@ img {
     font-family: 'Tinos', sans-serif;
     display: grid;
     text-align: center;
+    animation: dropIn 2s ease-out forwards; 
 }
 
 .introText h1 {
     font-size: 90px;
+    margin-bottom: 20px;
     color: #B6BE9C;
 }
 
@@ -130,7 +149,14 @@ img {
     font-size: 40px;
     color: #fff;
     text-align: center;
-    font-weight: 100;
+    font-weight: 10;
+}
+
+.introText h4 {
+    font-size: 34px;
+    color: #fff;
+    text-align: center;
+    font-weight: 10;
 }
 
 .introText a {
@@ -141,6 +167,9 @@ img {
     background: #001E2F;
     font-size: 24px;
     letter-spacing: 2px;
-    margin: 10px auto;
+    margin: 20px auto;
+}
 
+.introText a:hover {
+    background: #7B9E87;
 }
