--- a/global.css
+++ b/global.css
@@ -42,6 +42,7 @@ img {
         opacity: 0;
         transform: translateY(-20px);
     }
+
     to {
         opacity: 1;
         transform: translateY(0);
@@ -116,6 +117,8 @@ img {
     align-self: end;
 }
 
+.triangle-1 {}
+
 .semicircle {
     position: absolute;
     background-color: var(--font-color);
@@ -141,7 +144,75 @@ img {
 }
 
 .triangle-1 {
-    
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    width: 60px;
+    height: 60px;
+    transform: translate(60%, 480%);
+}
+
+.triangle-2 {
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    width: 60px;
+    height: 60px;
+    transform: translate(44%, 230%);
+}
+
+.triangle-3 {
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    width: 60px;
+    height: 60px;
+    transform: rotate(45deg) translate(38%, 30%);
+}
+
+.triangle-4 {
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    width: 60px;
+    height: 60px;
+    transform: translate(60%, 480%);
+}
+
+.triangle-5 {
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    width: 60px;
+    height: 60px;
+    transform: translate(60%, 480%);
+}
+
+.triangle-6 {
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    width: 60px;
+    height: 60px;
+    transform: translate(60%, 480%);
+}
+
+.triangle-7 {
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    width: 60px;
+    height: 60px;
+    transform: translate(60%, 480%);
+}
+
+.triangle-8 {
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    width: 60px;
+    height: 60px;
+    transform: translate(60%, 480%);
 }
 
 .visualizeMe img {
@@ -163,7 +234,7 @@ img {
     font-family: 'Tinos', sans-serif;
     display: grid;
     text-align: center;
-    animation: dropIn 2s ease-out forwards; 
+    animation: dropIn 2s ease-out forwards;
 }
 
 .introText h1 {
