--- a/global.css
+++ b/global.css
@@ -165,6 +165,9 @@ img {
     transform: translateZ(0);
     -webkit-transform: translateZ(0);
     isolation: isolate;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    image-rendering: -webkit-optimize-contrast;
 }
 
 .triangle-1 {
