--- a/global.css
+++ b/global.css
@@ -341,6 +341,13 @@ img {
     width: calc(100vw - 15px);
     font-size: 30px;
     letter-spacing: 2px;
+    text-decoration-line: underline;
+    text-decoration-style: solid;
+    text-decoration-skip-ink: auto;
+    text-decoration-color: #7B9E87;
+    text-decoration-thickness: 8%;
+    text-underline-offset: 25%;
+    margin-bottom: 30px;
 }
 
 .about-line::before {
@@ -348,6 +355,7 @@ img {
     flex: 1;
     height: 3px;
     background-color: var(--font-color);
+    margin-right: 20px;
 }
 
 .about-line::after {
@@ -355,10 +363,63 @@ img {
     flex: 1;
     height: 3px;
     background-color: var(--font-color);
+    margin-left: 20px;
 }
 
-.mintro img {
+.eduSection {
+    align-self: start;
+}
+
+.imageInfo {
+    display: inline-block;
+    text-align: center;
+}
+
+.imageInfo p {
+    font-family: 'Tinos', sans-serif;
+    color: #fff;
+    animation: dropIn 2s ease-out forwards;
+    margin: 10px 0 0 0;
+    text-align: center;
+}
+
+.imageInfo img {
     border: 6px solid var(--font-color);
-    width: 350px;
     border-radius: 70px;
+    max-width: 350px;
+    height: auto;
+}
+
+.parText {
+    margin-top: 20px;
+    color: #FFF;
+    text-shadow: 0 4px 5px rgba(0, 0, 0, 0.25);
+    font-family: Tinos;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    max-width: 500px;
+}
+
+.mintro {
+    display: grid;
+    grid-template-columns: 4fr 4fr 5fr;
+    gap: 10px;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+
+.sectionTitle {
+    font-size: 30px;
+    color: #fff;
+    letter-spacing: 2px;
+    font-family: 'Bebas Neue', sans-serif;
+    text-decoration-line: underline;
+    text-decoration-style: solid;
+    text-decoration-skip-ink: auto;
+    text-decoration-color: #7B9E87;
+    text-decoration-thickness: 8%;
+    text-underline-offset: 25%;
 }
