--- a/global.css
+++ b/global.css
@@ -368,6 +368,7 @@ img {
 
 .eduSection {
     align-self: start;
+    width: fit-content;
 }
 
 .imageInfo {
@@ -402,13 +403,27 @@ img {
     max-width: 500px;
 }
 
-.mintro {
+.large-div {
     display: grid;
     grid-template-columns: 4fr 4fr 5fr;
     gap: 10px;
     justify-content: center;
     align-items: center;
     height: 100%;
+}
+
+@media (max-width: 768px) {
+    .large-div {
+        grid-template-columns: 1fr 1fr;
+        height: auto; 
+    }
+}
+
+@media (max-width: 480px) {
+    .large-div {
+        grid-template-columns: 1fr;
+        height: auto;
+    }
 }
 
 .sectionTitle {
@@ -458,6 +473,19 @@ img {
 
 /*Meback*/
 
+.meBack {
+    display: grid;
+    grid-template-columns: 4fr 4fr 5fr;
+    gap: 10px;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+
+.backSection {
+    margin: 20px;
+}
+
 .about-right {
     margin-top: 20px;
     display: flex;
@@ -487,6 +515,14 @@ img {
 
 /*Meinterest*/
 
+.meInterest {
+    display: grid;
+    grid-template-columns: 4fr 4fr 5fr;
+    gap: 10px;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
 
 .about-left {
     margin-top: 20px;
