--- a/global.css
+++ b/global.css
@@ -368,7 +368,6 @@ img {
 
 .eduSection {
     align-self: start;
-    width: fit-content;
 }
 
 .imageInfo {
@@ -403,20 +402,13 @@ img {
     max-width: 500px;
 }
 
-.large-div {
+.mintro {
     display: grid;
     grid-template-columns: 4fr 4fr 5fr;
     gap: 10px;
     justify-content: center;
     align-items: center;
     height: 100%;
-}
-
-@media (max-width: 768px) {
-    .large-div {
-        grid-template-columns: 1fr 1fr;
-        height: auto; 
-    }
 }
 
 @media (max-width: 480px) {
@@ -464,7 +456,6 @@ img {
 .shapeStorage {
     position: relative;
     height: 100px;
-    width: 300px;
     display: grid;
     align-items: center;
     margin: 0 auto;
