--- a/global.css
+++ b/global.css
@@ -450,6 +450,7 @@ img {
         margin-left: auto !important;
         margin-right: auto !important;
         max-width: 300px;
+        margin-bottom: 60px
     }
 
     .imageInfo p {
@@ -461,6 +462,7 @@ img {
     font-size: 30px;
     color: #fff;
     letter-spacing: 4px;
+    font-weight: 100;
     font-family: 'Bebas Neue', sans-serif;
     text-decoration-line: underline;
     text-decoration-style: solid;
@@ -494,6 +496,7 @@ img {
 
 .shapeStorage {
     position: relative;
+    width: 300px;
     height: 100px;
     display: grid;
     align-items: center;
