--- a/global.css
+++ b/global.css
@@ -509,37 +509,31 @@ img {
         align-items: center;
         position: relative;
         height: 200px;
+        transform: translateX(75px);
     }
 
     .meBack .imageInfo {
         grid-column: 2;
         grid-row: 1;
         text-align: center;
+        transform: translateX(200px);
     }
 
     .meBack .imageInfo .storyImg {
         width: 350px;
-        transform: translateX(200px);
     }
 
     .meBack .imageInfo p {
         font-size: 1.5em;
         margin-top: 15px;
-        transform: translateX(200px) !important;
-    }
-
-    .meBack .middleContent .shapen {
-        width: 40px;
-        height: 40px;
-    }
-
-    .meBack .middleContent .circle-intro {
-        width: 30px;
-        height: 30px;
     }
 
     .meBack .middleContent img[style*="transform: translateX(200px)"] {
-        transform: translateX(50px) !important;
+        transform: translateX(60px) !important;
+    }
+
+    .meBack .middleContent img[style*="transform: translateY(50px) rotate(50deg);"] {
+        transform: translateY(80px) rotate(50deg) !important;
     }
 
     .meBack .middleContent div[style*="transform: translateX(100px)"] {
@@ -605,7 +599,7 @@ img {
     }
 
     .meInterest .backSection .parText {
-        font-size: 1.2em;
+        font-size: 2em;
         line-height: 1.5;
         max-width: 100% !important;
     }
@@ -614,43 +608,34 @@ img {
         grid-column: 2;
         grid-row: 1;
         display: flex;
-        justify-content: center;
-        align-items: center;
         position: relative;
         height: 200px;
+        transform: translateX(140px);
     }
 
     .meInterest .imageInfo {
         grid-column: 1;
         grid-row: 1;
         text-align: center;
+        margin-left: 60px;
     }
 
     .meInterest .imageInfo .storyImg {
-        max-width: 350px;
+        width: 350px;
     }
 
     .meInterest .imageInfo p {
-        font-size: 1.1em;
+        font-size: 1.5em;
         margin-top: 15px;
     }
 
-    .meInterest .middleContent .shapen {
-        width: 40px;
-        height: 40px;
-    }
-
-    .meInterest .middleContent .circle-intro {
-        width: 30px;
-        height: 30px;
-    }
 
     .meInterest .middleContent img[style*="transform: translateX(250%)"] {
-        transform: translateX(50px) !important;
+        transform: translateX(50px) translateY(100px) !important;
     }
 
     .meInterest .middleContent img[style*="transform: translateX(-60px) rotate(180deg)"] {
-        transform: translateX(-20px) rotate(180deg) !important;
+        transform: translateX(-70px) rotate(180deg) !important;
     }
 
     .meInterest .middleContent div[style*="transform: translateX(60px)"] {
@@ -658,7 +643,7 @@ img {
     }
 
     .meInterest .middleContent img[style*="transform: translateX(20px) rotate(180deg)"] {
-        transform: translateX(10px) rotate(180deg) !important;
+        transform: translateX(40px) rotate(180deg) !important;
     }
 }
 
