--- a/global.css
+++ b/global.css
@@ -9,6 +9,11 @@
     margin: 0;
 }
 
+html {
+    scroll-behavior: smooth;
+    scroll-padding-top: 70px;
+}
+
 body {
     font-family: sans-serif;
     background-color: var(--bg-color);
