--- a/global.css
+++ b/global.css
@@ -802,7 +802,7 @@ img {
 
 .horizontal-line {
     height: 5px;
-    width: 25%;
+    width: 380px;
     background-color: var(--font-color);
     position: absolute;
 }
