--- a/global.css
+++ b/global.css
@@ -793,7 +793,7 @@ img {
 }
 
 .center-line {
-    height: 1000px;
+    height: 2000px;
     width: 5px;
     background-color: var(--font-color);
     margin: 0 auto;
@@ -802,7 +802,7 @@ img {
 
 .horizontal-line {
     height: 5px;
-    width: 380px;
+    width: 25%;
     background-color: var(--font-color);
     position: absolute;
 }
@@ -819,8 +819,8 @@ img {
 }
 
 .workShown {
-    width: 450px;
-    height: 270px;
+    max-width: 450px;
+    max-height: 270px;
 }
 
 .pointGroup {
@@ -843,6 +843,21 @@ img {
     text-underline-offset: 25%;
     text-align: center;
     transform: translateY(-10px);
+}
+
+.workText {
+    color: #FFF;
+    text-shadow: 0 4px 5px rgba(0, 0, 0, 0.25);
+    font-family: Tinos;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    max-width: 500px;
+    hyphens: auto;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+    -webkit-hyphens: auto;
 }
 
 /*Footer*/
