--- a/global.css
+++ b/global.css
@@ -781,6 +781,21 @@ img {
 }
 
 /*My Work*/
+.decorativeBunch {
+    position: absolute;
+}
+
+@keyframes floating {
+
+    0%,
+    100% {
+        transform: translateY(-3500px);
+    }
+
+    50% {
+        transform: translateY(-3480px);
+    }
+}
 
 .top-circle {
     border-radius: 500px;
@@ -793,11 +808,10 @@ img {
 }
 
 .center-line {
-    height: 2000px;
+    height: 3600px;
     width: 5px;
     background-color: var(--font-color);
     margin: 0 auto;
-    transform: translateY(-10px);
 }
 
 .horizontal-line {
@@ -854,10 +868,9 @@ img {
     font-weight: 400;
     line-height: normal;
     max-width: 500px;
-    hyphens: auto;
-    word-wrap: break-word;
+    word-break: break-word;
     overflow-wrap: break-word;
-    -webkit-hyphens: auto;
+    word-wrap: break-word;
 }
 
 /*Footer*/
