--- a/global.css
+++ b/global.css
@@ -75,12 +75,12 @@ img {
     display: flex;
 }
 
-.navbar a:hover {
+.navbar a:hover:not(.navName)  {
     background-color: var(--font-color);
 }
 
 
-.navbar a {
+.navbar a:not(.navName) {
     padding: 10px;
     font-family: 'Bebas Neue', sans-serif;
     font-size: larger;
@@ -100,6 +100,7 @@ img {
     font-family: 'Tilt Warp';
     font-size: 22px;
     font-weight: 400;
+    padding: 0 20px;
 }
 
 /*Utilities*/
@@ -107,10 +108,6 @@ img {
     max-width: 1600px;
     margin: 0 auto;
     overflow: auto;
-}
-
-.container p {
-    padding: 0 20px;
 }
 
 .flex {
